# resque-c

./: .gitignore  .gitmodules  LICENSE  Makefile.am  README  autogen.sh  configure.ac  proto.lua
libredis/: Makefile.am  redis-client.c  redis-client.h
src/: Makefile.am  redis-client.h  resque-error.c  resque-error.h  resque-worker.c  resque.c  resque.h  resque_error.c  resque_error.h
test/: Makefile.am  redis-test.c
